# hometaxbot

./: .envrc  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
hometaxbot/: __init__.py  cli.py  crypto.py  models.py  types.py
hometaxbot/scraper/: __init__.py  browser.py  hometax_xml_fields.yml  reports.py  requestutil.py  servicecheck.py  taxagent.py  transactions.py  util.py  webdriver.py
tests/: serviceCheck.decoded.20250514.js  serviceCheck.decoded.20250515.js  serviceCheck.do.20250514.js  serviceCheck.do.20250515.js  test_cta.py  test_encrypted_post.py  test_login.py  test_scrape.py
tests/testdata/: __init__.py.sample
