[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hometaxbot"
authors = [{name = "Pak Youngrok", email = "youngrok@finecode.kr"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "pypinksign",
    "pycryptodome",
    "pyOpenSSL==23.2.0",
    "python-dateutil",
    "pyyaml",
    "certifi",
    "urllib3",
    "idna",
    "requests",
    "typer"
]
[project.urls]
Home = "https://github.com/finecodekr/hometaxbot"
